# IGTWizard

./: CMakeLists.txt  IGTWizard.py  README.md
IGTWizard/: CMakeLists.txt  IGTWizard.py
WorkflowOrganizer/: CMakeLists.txt  WorkflowOrganizer.py
